rename to auth.lua

--- a/files/etc/nginx/sites-available/99-app.conf
+++ b/files/etc/nginx/sites-available/99-app.conf
@@ -15,7 +15,7 @@ server {
 	
 	# PHP FPM for index.php
 	location /index.php {
-		include inc/auth.inc;
+		rewrite_by_lua_file /etc/nginx/inc/auth.lua;
 		include fastcgi_params;
 		break;
 	}
