--- a/files/etc/nginx/sites-available/99-app.conf
+++ b/files/etc/nginx/sites-available/99-app.conf
@@ -5,6 +5,9 @@ server {
 	index index.php index.html index.htm;
 	autoindex off;
 	
+	set $no_redirect_api 1;
+	set $no_redirect_login 1;
+	
 	# Search Engine Friendly URLs
 	location / {
 		if (-f $request_filename) {
