--- a/files/etc/nginx/sites-available/99-app.conf
+++ b/files/etc/nginx/sites-available/99-app.conf
@@ -1,12 +1,13 @@
 server {
 	listen 80;
 	server_name _ default;
-	root /var/www/html;
+	root /var/www/html/public;
 	index index.php index.html index.htm;
 	autoindex off;
 	
 	set $no_redirect_api 1;
 	set $no_redirect_login 1;
+	set $enable_auth_basic 0;
 	
 	# Search Engine Friendly URLs
 	location / {
